--- a/TicketSystem/Views/Organizer/CheckTickets.cshtml
+++ b/TicketSystem/Views/Organizer/CheckTickets.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
     Ticket ticket = ViewBag.Ticket;
+    var eventt = ViewBag.Event;
 }
 
     <h2 class="mb-4">Check Tickets</h2>
@@ -26,7 +27,7 @@
                             <p class="card-text"><b>Ticket ID:</b> @ticket.TicketID</p>
                             <p class="card-text"><b>Name:</b> @ticket.CustomerFirstname @ticket.CustomerSurname</p>
                             <p class="card-text"><b>Email:</b> @ticket.CustomerEmail</p>
-                            <button class="btn btn-primary float-right" type="submit" asp-controller="Organizer" asp-action="TicketUsed" asp-route-id="CheckTickets"><i class="fas fa-check"></i> Use ticket</button>
+                            <a class="btn btn-primary float-right" type="submit" asp-controller="Organizer" asp-action="TicketUsed" asp-route-id="@ticket.TicketID"><i class="fas fa-check"></i> Use ticket</a>
                             <p class="card-text"><b>Phonenumber:</b> @ticket.CustomerPhoneNumber</p>
                         </div>
                     </div>
@@ -42,7 +43,7 @@
                             <p class="card-text"><b>Ticket ID:</b> @ticket.TicketID</p>
                             <p class="card-text"><b>Name:</b> @ticket.CustomerFirstname @ticket.CustomerSurname</p>
                             <p class="card-text"><b>Email:</b> @ticket.CustomerEmail</p>
-                            <button class="btn btn-secondary float-right" type="submit" asp-controller="Organizer" asp-action="TicketUsed" disabled ><i class="fas fa-check"></i> Use ticket </button>
+                           <a class="btn btn-secondary float-right" type="submit" asp-controller="Organizer" asp-action="TicketUsed" disabled ><i class="fas fa-check"></i> Use ticket </a>
                             <p class="card-text"><b>Phonenumber:</b> @ticket.CustomerPhoneNumber</p>
                         </div>
                     </div>
