--- a/TicketSystem/Views/Organizer/CheckTickets.cshtml
+++ b/TicketSystem/Views/Organizer/CheckTickets.cshtml
@@ -35,14 +35,14 @@
             }
             else
             {
-                <div class="col-3">
+                <div class="col-8">
                     <h4 class="card-text text-danger">Ticket information: Ticket already used</h4>
                     <div class="card text-muted" style="width: 35rem;">
                         <div class="card-body">
                             <p class="card-text"><b>Ticket ID:</b> @ticket.TicketID</p>
                             <p class="card-text"><b>Name:</b> @ticket.CustomerFirstname @ticket.CustomerSurname</p>
                             <p class="card-text"><b>Email:</b> @ticket.CustomerEmail</p>
-                            <button class="btn btn-secondary float-right" type="submit" asp-controller="Organizer" asp-action="TicketUsed" disabled ><i class="fas fa-check"></i> Use ticket</button>
+                            <button class="btn btn-secondary float-right" type="submit" asp-controller="Organizer" asp-action="TicketUsed" disabled ><i class="fas fa-check"></i> Use ticket </button>
                             <p class="card-text"><b>Phonenumber:</b> @ticket.CustomerPhoneNumber</p>
                         </div>
                     </div>
@@ -52,7 +52,7 @@
         else
         {
                 <div class="col-3">
-                    <p class="btn btn-danger disabled">Ticket ID does not exist</p>
+                    <p class="btn btn-danger disabled" style="margin-top: 5.5rem;"><i class="fas fa-exclamation "></i>Ticket ID does not exist<i class=" fas fa-exclamation"></i></p>
                 </div>
         }
     </div>
