capslock på email address

--- a/TicketSystem/Views/Organizer/CreateOrganizer.cshtml
+++ b/TicketSystem/Views/Organizer/CreateOrganizer.cshtml
@@ -26,8 +26,8 @@
             @Html.TextBox("Phonenumber", null, new { required = true, placeholder = "Phone number", @class = "form-control", @type = "number" })<br />
         </div>
         <div class="form-group mb-0">
-            @Html.Label("Email Address *") <br />
-            @Html.TextBox("Email", null, new { required = true, placeholder = "Email Address", @class = "form-control" })<br />
+            @Html.Label("Email address *") <br />
+            @Html.TextBox("Email", null, new { required = true, placeholder = "Email address", @class = "form-control" })<br />
 
         </div>
         <div class="form-group mb-">
