Front end. Organizer login remove when signed in

--- a/TicketSystem/Views/Customer/LandingPage.cshtml
+++ b/TicketSystem/Views/Customer/LandingPage.cshtml
@@ -14,14 +14,14 @@
                     <div class="card-body">
                         <div class="container-fluid">
                             <div class="row">
-                                <div class="col-2">
-                                    <img src="/Image/@eventt.Image" class="lpimg"/>
+                                <div class="col-2 mt-2">
+                                    <img src="/Image/@eventt.Image" class="lpimg" />
                                 </div>
                                 <div class="col-8">
                                     <h4 class="card-title"><b>@eventt.EventName</b></h4>
-                                    <p class="mb-0"><b>Date: </b>@eventt.Date.Day/@eventt.Date.Month/@eventt.Date.Year</p>
-                                    <p class="mb-0"><b>Time:</b> @eventt.Time.Hours:@eventt.Time.Minutes</p>
-                                    <p class="mb-0"><b>Location</b> @eventt.Location</p>
+                                    <p class="mb-0"><b><i class="fas fa-calendar-day mt-3"></i> Date: </b>@eventt.Date.Day/@eventt.Date.Month/@eventt.Date.Year</p>
+                                    <p class="mb-0"><b><i class="far fa-clock"></i> Time:</b> @eventt.Time.Hours:@eventt.Time.Minutes</p>
+                                    <p class="mb-0"><b><i class="fas fa-map-marked-alt"></i> Location</b> @eventt.Location</p>
                                 </div>
                                 <div class="col-2 text-center">
                                     <p>Ticket price: <br /><b>@eventt.Price kr.</b> </p>
