--- a/TicketSystem/Views/Organizer/Login.cshtml
+++ b/TicketSystem/Views/Organizer/Login.cshtml
@@ -3,64 +3,53 @@
 
 }
 
-
-<p>
-    @ViewBag.Message
-
-
-</p>
-﻿
-
-
 <div class="row" style="margin-bottom: 20rem;">
-    <div class="col-8 ">
-        <h2>Organizer Login-page</h2>
-        <div class="card w-75 mt-3">
+    <div class="col-6">
+        <h2>Organizer Login-page</h2><br />
+        <div class="card">
             <div class="card-body">
+
                 @if (ViewBag.error != null)
                 {
                     <div class="alert alert-danger" role="alert">
-                        <i class="fas fa-exclamation-circle"></i>  @ViewBag.error
+                        <i class="fas fa-exclamation-circle"></i>
                     </div>
                 }
+                            @using (Html.BeginForm())
+                        {
+                            <div class="form-group">
+                                @Html.Label("Email Address *")
+                                <small id="emailHelp" class="form-text text-muted">Enter your email.</small>
+                            @Html.TextBox("Email", null, new { required = true, placeholder = "Email Address", @class = "form-control", type = "email", id = "loginemail" })
 
+                            </div>
 
-                @using (Html.BeginForm())
-                {
-                    <div class="form-group">
-                        @Html.Label("Email Address *")
-                        <small id="emailHelp" class="form-text text-muted">Enter your email.</small>
-                    @Html.TextBox("Email", null, new { required = true, placeholder = "Email Address", @class = "form-control", type = "email", id = "loginemail" })<br />
+                            <div class="form-group">
+                                @Html.Label("Password *") <br />
+                                <small id="passwordhelp" class="form-text text-muted">Enter your password.</small>
+                                @Html.Password("Password", null, new { required = true, placeholder = "Password", @class = "form-control", id = "loginpassword" })<br />
 
+                            </div>
+                            <button type="submit" class="btn btn-primary d-block float-right"><i class="fas fa-sign-in-alt"></i> Sign in</button>
+                            <a asp-controller="organizer" asp-action="createorganizer">Not registered? - Sign up</a>
+                        }
                     </div>
-
-                    <div class="form-group">
-                        @Html.Label("Password *") <br />
-                        <small id="passwordhelp" class="form-text text-muted">Enter your password.</small>
-                        @Html.Password("Password", null, new { required = true, placeholder = "Password", @class = "form-control", id = "loginpassword" })<br />
-
-                    </div>
-                    <button type="submit" class="btn btn-primary d-block float-right"><i class="fas fa-sign-in-alt"></i> Sign in</button>
-                    <a asp-controller="organizer" asp-action="createorganizer">Not registered? - Sign up</a>
-                }
-            </div>
+             </div>
         </div>
-    </div>
-            <div class="col-4 float-right">
-        <div class="card mt-5" style="width: 18rem;">
-            <div class="card-body">
-                <h5 class="card-subtitle mb-2 text-muted"><b><i class="far fa-question-circle"></i> As an organizer you can:</b></h5>
-
-                <ul class="list-group list-group-flush text-muted">
-                    <li class="list-group-item"><i class="fas fa-angle-right"></i> Create events</li>
-                    <li class="list-group-item"><i class="fas fa-angle-right"></i> Sell tickets</li>
-                    <li class="list-group-item"><i class="fas fa-angle-right"></i> Monitor sold tickets</li>
-                </ul>
+        <div class="col-4 float-right">
+            <div class="card" style="width: 18rem; margin: 4.8rem;">
+                <div class="card-body">
+                    <h5 class="card-subtitle mb-2 text-muted"><b><i class="far fa-question-circle"></i> As an organizer you can:</b></h5>
+                    <ul class="list-group list-group-flush text-muted">
+                        <li class="list-group-item"><i class="fas fa-angle-right"></i> Create events</li>
+                        <li class="list-group-item"><i class="fas fa-angle-right"></i> Sell tickets</li>
+                        <li class="list-group-item"><i class="fas fa-angle-right"></i> Monitor sold tickets</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
 </div>
-    </div>
 
 
 
