--- a/TicketSystem/Views/Customer/Confirmation.cshtml
+++ b/TicketSystem/Views/Customer/Confirmation.cshtml
@@ -6,11 +6,9 @@
 }
 <div class="row">
     <div class="col-12">
-        <div class="card-header">
-            Confirmation
-        </div>
+        <h1 class="text-center m-4"><b>Confirmation</b></h1>
         <div class="card-body">
-            <h5 class="card-title text-center">Ticket to: @eventt.EventName </h5>
+            <h5 class="card-title text-center mb-5">Ticket to: @eventt.EventName </h5>
         </div>
     </div>
 </div>
