--- a/TicketSystem/Views/Organizer/OrganizerLandingPage.cshtml
+++ b/TicketSystem/Views/Organizer/OrganizerLandingPage.cshtml
@@ -44,9 +44,9 @@
                         </div>
                         <div class="col-4 mt-2">
                             <h4 class="card-title"><b>@eventt.EventName</b></h4>
-                            <p class="mb-0"><b>Date: </b>@eventt.Date.Day/@eventt.Date.Month/@eventt.Date.Year</p>
-                            <p class="mb-0"><b>Time:</b> @eventt.Time.Hours:@eventt.Time.Minutes</p>
-                            <p class="mb-0"><b>Location</b> @eventt.Location</p>
+                            <p class="mb-0"><i class="fas fa-calendar-day mt-3"></i><b> Date: </b>@eventt.Date.Day/@eventt.Date.Month/@eventt.Date.Year</p>
+                            <p class="mb-0"><i class="far fa-clock"></i> <b>Time:</b> @eventt.Time.Hours:@eventt.Time.Minutes</p>
+                            <p class="mb-0"><i class="fas fa-map-marked-alt"></i><b> Location</b> @eventt.Location</p>
                         </div>
                         <div class="col-4">
                             <button type="button" class="btn btn-light btn-sm mt-2 text-muted btn-nohover">
