--- a/TicketSystem/Views/Organizer/CreateEvent.cshtml
+++ b/TicketSystem/Views/Organizer/CreateEvent.cshtml
@@ -72,7 +72,7 @@
                 <a class="btn btn-primary" asp-controller="Organizer" asp-action="OrganizerLandingPage" asp-route-id="@organizer.OrganizerID"><i class="fas fa-angle-left"></i> Back</a>
             </div>
             <div class="col-4 text-right">
-                <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i> Publish event</button>
+                <button type="submit" class="btn btn-success"><i class="fas fa-check"></i> Publish event</button>
             </div>
         </div>
     </div>
