--- a/TicketSystem/Views/Organizer/Login.cshtml
+++ b/TicketSystem/Views/Organizer/Login.cshtml
@@ -11,9 +11,10 @@
 
                 @if (ViewBag.error != null)
                 {
-                    <div class="alert alert-danger" role="alert">
-                        <i class="fas fa-exclamation-circle"></i>
-                    </div>
+                <div class="alert alert-danger" role="alert">
+                    <i class="fas fa-exclamation-circle"></i>
+                    Wrong username or password
+                </div>
                 }
                             @using (Html.BeginForm())
                         {
