Time-format fix

--- a/TicketSystem/Views/Customer/Confirmation.cshtml
+++ b/TicketSystem/Views/Customer/Confirmation.cshtml
@@ -19,7 +19,7 @@
         <ul class="eventdata">
             <li>Location: @eventt.Location</li>
             <li>Date: @eventt.Date.Day/@eventt.Date.Month/@eventt.Date.Year</li>
-            <li>Time: @eventt.Time.Hours:@eventt.Time.Minutes</li>
+            <li>Time: @eventt.Time.ToString("hh"):@eventt.Time.ToString("mm")</li>
             <li>Price: @eventt.Price kr.</li>
         </ul>
     </div>
