--- a/TicketSystem/Views/Customer/LandingPage.cshtml
+++ b/TicketSystem/Views/Customer/LandingPage.cshtml
@@ -20,7 +20,7 @@
                                 <div class="col-8">
                                     <h4 class="card-title"><b>@eventt.EventName</b></h4>
                                     <p class="mb-0"><b><i class="fas fa-calendar-day mt-3"></i> Date: </b>@eventt.Date.Day/@eventt.Date.Month/@eventt.Date.Year</p>
-                                    <p class="mb-0"><b><i class="far fa-clock"></i> Time:</b> @eventt.Time.Hours:@eventt.Time.Minutes</p>
+                                    <p class="mb-0"><b><i class="far fa-clock"></i> Time:</b> @eventt.Time.ToString("hh"):@eventt.Time.ToString("mm")</p>
                                     <p class="mb-0"><b><i class="fas fa-map-marked-alt"></i> Location</b> @eventt.Location</p>
                                 </div>
                                 <div class="col-2 text-center">
