--- a/TicketSystem/Views/Customer/OrderTicket.cshtml
+++ b/TicketSystem/Views/Customer/OrderTicket.cshtml
@@ -9,7 +9,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-4">
-                        <img src="/Image/" class="otimg" />
+                        <img src="/Image/placeholder.png" class="otimg" />
                     </div>
                     <div class="col-8">
                         <h3 class="card-title">@eventt.EventName</h3>
