--- a/TicketSystem/Views/Customer/LandingPage.cshtml
+++ b/TicketSystem/Views/Customer/LandingPage.cshtml
@@ -15,7 +15,7 @@
                         <div class="container-fluid">
                             <div class="row">
                                 <div class="col-2 mt-2">
-                                    <img src="/Image/@eventt.Image" class="lpimg" />
+                                    <img src="/Image/placeholder.png" class="lpimg" />
                                 </div>
                                 <div class="col-8">
                                     <h4 class="card-title"><b>@eventt.EventName</b></h4>
