--- a/TicketSystem/Views/Organizer/OrganizerLandingPage.cshtml
+++ b/TicketSystem/Views/Organizer/OrganizerLandingPage.cshtml
@@ -40,7 +40,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-2 mt-4">
-                            <img src="/Image/@eventt.Image" class="lpimg"/>
+                            <img src="/Image/placeholder.png" class="lpimg"/>
                         </div>
                         <div class="col-4 mt-2">
                             <h4 class="card-title"><b>@eventt.EventName</b></h4>
