--- a/TicketSystem/Views/Customer/OrderTicket.cshtml
+++ b/TicketSystem/Views/Customer/OrderTicket.cshtml
@@ -43,11 +43,11 @@
             <div class="form-group mb-0">
 
                 @Html.Label("Email *") <br />
-                @Html.TextBox("customer_email", null, new { required = true, placeholder = "Email", @class = "form-control", @type = "text" })<br />
+                @Html.TextBox("customer_email", null, new { required = true, placeholder = "Email", @class = "form-control", @type = "email" })<br />
             </div>
             <div class="form-group mb-0">
                 @Html.Label("Confirm Email *") <br />
-                @Html.TextBox("ConfirmCustomerEmail", null, new { required = true, placeholder = "Confirm Email", @class = "form-control", @type = "text" })<br />
+                @Html.TextBox("ConfirmCustomerEmail", null, new { required = true, placeholder = "Confirm Email", @class = "form-control", @type = "email" })<br />
             </div>
             <div class="form-group mb-0">
                 @Html.Label("Phone number *") <br />
