--- a/TicketSystem/Views/Organizer/CreateEvent.cshtml
+++ b/TicketSystem/Views/Organizer/CreateEvent.cshtml
@@ -41,7 +41,7 @@
         <div class="form-group mb-0">
             @Html.Label("Price *")
             <small id="pricehelp" class="form-text text-muted">Please enter a price in DKK</small>
-            @Html.TextBox("Price", null, new { required = true, placeholder = "Price", @class = "form-control", @type = "float" })<br />
+            @Html.TextBox("Price", null, new { required = true, placeholder = "Price", @class = "form-control", @type = "number" })<br />
         </div>
         <div class="form-group mb-0">
             @Html.Label("Image")
