--- a/TicketSystem/Views/Organizer/ChangeLoginInfo.cshtml
+++ b/TicketSystem/Views/Organizer/ChangeLoginInfo.cshtml
@@ -37,7 +37,7 @@
 
             <div class="form-group mb-0">
                 @Html.Label("Email Address") <br />
-                @Html.TextBox("Email", (string)organizer.Email, new { required = true, @class = "form-control" })<br />
+                @Html.TextBox("Email", (string)organizer.Email, new { required = true, @class = "form-control",@type = "email" })<br />
 
             </div>
 
